--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
+        <title>WebStudio</title>
     </head>
     <body>
         <header>
             <nav>
-                <a href="/">
-                    <img src="./images/logo.svg" alt="">
+                <a href="./">
+                    Web Studio
                 </a>
 
                 <ul>
-                    <li><a href="">Студия</a></li>
-                    <li><a href="">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
+                    <li><a href="#">Студия</a></li>
+                    <li><a href="#">Портфолио</a></li>
+                    <li><a href="#">Контакты</a></li>
                 </ul>
             </nav>
 
             <address>
                 <img src="./images/letter.svg">
-                info@devstudio.com
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <img src="./images/mobile.svg" alt="">
-                +38 096 111 11 11
+                <a href="tel:+380961111111"> +38 096 111 11 11</a>
             </address>
         </header>
         
@@ -34,5 +34,154 @@
                 <button>Заказать услугу</button>
             </section>
         </div>
+
+        <section>
+            <div>
+                <ul>
+                    <li>
+                        <img src="./images/Vector1.png" alt="Внимание к деталям">
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <img src="./images/Vector-2.png" alt="Пунктуальность">
+                        <h3>Пунктуальность</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <img src="./images/Vector-3.png" alt="Планирование">
+                        <h3>Планирование</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <img src="./images/vector 4.png" alt="Современные технологии">
+                        <h3>Современные технологии</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                    <li>
+
+                    </li>
+                    <li>
+
+                    </li>
+                    <li>
+
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/member1.jpg" alt="">
+                    <h3>Николай Кучеренко</h3>
+                    <p lang="en">Product Designer</p>
+                    <ul>
+                        <li>
+                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                        </li>
+                        <li><a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/member2.jpg" alt="">
+                    <h3>Ольга Иванова</h3>
+                    <p lang="en">Frontend Developer</p>
+                    <ul>
+                        <li>
+                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/member3.jpg" alt="">
+                    <h3>Андрей Шевченко</h3>
+                    <p lang="en">Marketing</p>
+                    <ul>
+                        <li>
+                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"> <img src="./images/instalogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/member4.jpg" alt="">
+                    <h3>Иван Николаев</h3>
+                    <p lang="en">UI Designer</p>
+                    <ul>
+                        <li>
+                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                        </li>
+                        <li>
+                            <a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Постоянные клиенты</h2>
+            <ul>
+                <li> 
+                    <a href="#"><img src="./images/companylogo1.png" alt="YA & CO"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/companylogo2.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/compaylogo3.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/companylogo4.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/companylogo5.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/companylogo6.png" alt=""></a>
+                </li>
+            </ul>
+        </section>
+
+        <footer>
+
+        </footer>
     </body>
-</html>
+</html
