--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <nav>
                 <a href="./">
-                    Web Studio
+                    <span>Web Studio</span> 
                 </a>
 
                 <ul>
@@ -85,15 +85,15 @@
                     <p lang="en">Product Designer</p>
                     <ul>
                         <li>
-                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
                         </li>
-                        <li><a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                        <li><a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
                         </li>
                     </ul>
                 </li>
@@ -103,16 +103,16 @@
                     <p lang="en">Frontend Developer</p>
                     <ul>
                         <li>
-                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                            <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
                         </li>
                     </ul>
                 </li>
@@ -122,16 +122,16 @@
                     <p lang="en">Marketing</p>
                     <ul>
                         <li>
-                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"> <img src="./images/instalogo.png"></a>
+                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"> <img src="./images/instalogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                            <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
                         </li>
                     </ul>
                 </li>
@@ -141,21 +141,22 @@
                     <p lang="en">UI Designer</p>
                     <ul>
                         <li>
-                            <a href="https://www.instagram.com" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/explore" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
                         </li>
                         <li>
-                            <a href="https://ru.linkedin.com" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                            <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
                         </li>
                     </ul>
                 </li>
             </ul>
         </section>
+
         <section>
             <h2>Постоянные клиенты</h2>
             <ul>
@@ -181,7 +182,38 @@
         </section>
 
         <footer>
-
+            <div>
+                <a href="./"><span>Web Studio</span></a>
+                <address>
+                    <span>г. Киев, пр-т Леси Украинки, 26</span>
+                    <span>info@example.com</span>
+                    <span>+38 099 111 11 11</span>
+                </address>
+            </div>
+            <div>
+                <ul>
+                    <span>Присоединяйтесь</span>
+                    <li>
+                        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                    </li>
+                    <li>
+                        <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <form action="textarea1.php" method="post">
+                    <p><b>Подпишитесь на рассылку:</b></p>
+                    <p><textarea rows="2" cols="45" name="text"></textarea></p>
+                    <p><input type="submit" value="Подписаться"></p>
+                  </form>
+            </div>
         </footer>
     </body>
 </html
