--- a/index.html
+++ b/index.html
@@ -27,160 +27,160 @@
                 <a href="tel:+380961111111"> +38 096 111 11 11</a>
             </address>
         </header>
-        
-        <div>
+
+        <main>
             <section>
                 <h1>Эффективные решения для вашего бизнеса</h1>
                 <button>Заказать услугу</button>
             </section>
-        </div>
 
-        <section>
-            <div>
+            <section>
+                <div>
+                    <ul>
+                        <li>
+                            <img src="./images/Vector1.png" alt="Внимание к деталям">
+                            <h3>Внимание к деталям</h3>
+                            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        </li>
+                        <li>
+                            <img src="./images/Vector2.png" alt="Пунктуальность">
+                            <h3>Пунктуальность</h3>
+                            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        </li>
+                        <li>
+                            <img src="./images/Vector3.png" alt="Планирование">
+                            <h3>Планирование</h3>
+                            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        </li>
+                        <li>
+                            <img src="./images/vector4.png" alt="Современные технологии">
+                            <h3>Современные технологии</h3>
+                            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Чем мы занимаемся</h2>
+                    <ul>
+                        <li>
+                            <img src="./images/img2.0.jpg" alt="Десктопные приложения"><p>Десктопные приложения</p width="370">
+                        </li>
+                        <li>
+                            <img src="./images/img2.1.jpg" alt="Мобильные приложения"><p>Мобильные приложения</p width="370">
+                        </li>
+                        <li>
+                            <img src="./images/img2.2.jpg" alt="Дизайнерсике решения"><p>Дизайнерсике решения</p width="370">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+                <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./images/Vector1.png" alt="Внимание к деталям">
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <img src="./images/member1.jpg" alt="" width="270" height="260">
+                        <h3>Николай Кучеренко</h3>
+                        <p lang="en">Product Designer</p>
+                        <ul>
+                            <li>
+                                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            </li>
+                            <li><a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <img src="./images/Vector2.png" alt="Пунктуальность">
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <img src="./images/member2.jpg" alt="" width="270" height="260">
+                        <h3>Ольга Иванова</h3>
+                        <p lang="en">Frontend Developer</p>
+                        <ul>
+                            <li>
+                                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <img src="./images/Vector3.png" alt="Планирование">
-                        <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <img src="./images/member3.jpg" alt="" width="270" height="260">
+                        <h3>Андрей Шевченко</h3>
+                        <p lang="en">Marketing</p>
+                        <ul>
+                            <li>
+                                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"> <img src="./images/instalogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <img src="./images/vector4.png" alt="Современные технологии">
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <img src="./images/member4.jpg" alt="" width="270" height="260">
+                        <h3>Иван Николаев</h3>
+                        <p lang="en">UI Designer</p>
+                        <ul>
+                            <li>
+                                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
+                            </li>
+                            <li>
+                                <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
-            </div>
-            <div>
-                <h2>Чем мы занимаемся</h2>
+            </section>
+
+            <section>
+                <h2>Постоянные клиенты</h2>
                 <ul>
-                    <li>
-                        <img src="./images/img2.0.jpg" alt="Десктопные приложения"><p>Десктопные приложения</p>
+                    <li> 
+                        <a href="#"><img src="./images/companylogo1.png" alt="YA & CO"></a>
                     </li>
                     <li>
-                        <img src="./images/img2.1.jpg" alt="Мобильные приложения"><p>Мобильные приложения</p>
+                        <a href="#"><img src="./images/companylogo2.png" alt=""></a>
                     </li>
                     <li>
-                        <img src="./images/img2.2.jpg" alt="Дизайнерсике решения"><p>Дизайнерсике решения</p>
+                        <a href="#"><img src="./images/compaylogo3.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/companylogo4.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/companylogo5.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/companylogo6.png" alt=""></a>
                     </li>
                 </ul>
-            </div>
-        </section>
-
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/member1.jpg" alt="">
-                    <h3>Николай Кучеренко</h3>
-                    <p lang="en">Product Designer</p>
-                    <ul>
-                        <li>
-                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
-                        </li>
-                        <li><a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./images/member2.jpg" alt="">
-                    <h3>Ольга Иванова</h3>
-                    <p lang="en">Frontend Developer</p>
-                    <ul>
-                        <li>
-                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./images/member3.jpg" alt="">
-                    <h3>Андрей Шевченко</h3>
-                    <p lang="en">Marketing</p>
-                    <ul>
-                        <li>
-                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"> <img src="./images/instalogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./images/member4.jpg" alt="">
-                    <h3>Иван Николаев</h3>
-                    <p lang="en">UI Designer</p>
-                    <ul>
-                        <li>
-                            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Instagram"><img src="./images/instalogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/explore" target="_blank" rel="noopener noreferrer" aria-label="ссылка Twitter"><img src="./images/twitlogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Facebook"><img src="./images/facelogo.png"></a>
-                        </li>
-                        <li>
-                            <a href="https://ru.linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="ссылка Linkedin"><img src="./images/linkedinlogo.png"></a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Постоянные клиенты</h2>
-            <ul>
-                <li> 
-                    <a href="#"><img src="./images/companylogo1.png" alt="YA & CO"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./images/companylogo2.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./images/compaylogo3.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./images/companylogo4.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./images/companylogo5.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./images/companylogo6.png" alt=""></a>
-                </li>
-            </ul>
-        </section>
-
+            </section>
+        </main>
+        
         <footer>
             <div>
                 <a href="./"><span>Web Studio</span></a>
