--- a/index.html
+++ b/index.html
@@ -35,44 +35,43 @@
             </section>
 
             <section>
-                <div>
-                    <ul>
-                        <li>
-                            <img src="./images/Vector1.png" alt="Внимание к деталям">
-                            <h3>Внимание к деталям</h3>
-                            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                        </li>
-                        <li>
-                            <img src="./images/Vector2.png" alt="Пунктуальность">
-                            <h3>Пунктуальность</h3>
-                            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                        </li>
-                        <li>
-                            <img src="./images/Vector3.png" alt="Планирование">
-                            <h3>Планирование</h3>
-                            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                        </li>
-                        <li>
-                            <img src="./images/vector4.png" alt="Современные технологии">
-                            <h3>Современные технологии</h3>
-                            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <h2>Чем мы занимаемся</h2>
-                    <ul>
-                        <li>
-                            <img src="./images/img2.0.jpg" alt="Десктопные приложения"><p>Десктопные приложения</p width="370">
-                        </li>
-                        <li>
-                            <img src="./images/img2.1.jpg" alt="Мобильные приложения"><p>Мобильные приложения</p width="370">
-                        </li>
-                        <li>
-                            <img src="./images/img2.2.jpg" alt="Дизайнерсике решения"><p>Дизайнерсике решения</p width="370">
-                        </li>
-                    </ul>
-                </div>
+                <ul>
+                    <li>
+                        <img src="./images/Vector1.png" alt="Внимание к деталям">
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <img src="./images/Vector2.png" alt="Пунктуальность">
+                        <h3>Пунктуальность</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <img src="./images/Vector3.png" alt="Планирование">
+                        <h3>Планирование</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <img src="./images/vector4.png" alt="Современные технологии">
+                        <h3>Современные технологии</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                    <li>
+                        <img src="./images/img2.0.jpg" alt="Десктопные приложения" width="370"><p>Десктопные приложения</p>
+                    </li>
+                    <li>
+                        <img src="./images/img2.1.jpg" alt="Мобильные приложения" width="370"><p>Мобильные приложения</p>
+                    </li>
+                    <li>
+                        <img src="./images/img2.2.jpg" alt="Дизайнерсике решения" width="370"><p>Дизайнерсике решения</p>
+                    </li>
+                </ul>
             </section>
 
             <section>
